--- a/templates/contacts/list_contacts.html
+++ b/templates/contacts/list_contacts.html
@@ -42,6 +42,13 @@
     </div>
     {% endif %}
 
+    {% if contact.note %}
+    <div class="flex">
+      <div class="pr2"><i></i></div>
+      <div>{{ contact.note }}</div>
+    </div>
+    {% endif %}
+
     <p>
       <a href="{% url 'edit_contact' pk=contact.pk %}">Edit Contact</a><br>    
       <a class="red" href="{% url 'delete_contact' pk=contact.pk %}">Delete Contact</a>
